--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-slick": "^0.29.0",
     "sass": "^1.50.0",
+    "swiper": "^8.1.3",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
@@ -47,5 +49,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-slick": "^0.23.8"
   }
 }
